[package]
name = "ad-trader-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.12"
anyhow = "1.0.58"
async-trait = "0.1"
openrtb = "0.2.0"
bloom = "0.2.0"
tokio = {version = "1", features =["full"]}
bytes = "1"
reqwest = { version = "0.11", features = ["json"] }

[dev-dependencies]
tokio-test = "*"